STEP 5/OPA Usecases/Deny Egress/deployment-non-violation.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
        name: allow
        namespace: loadbalancer
spec:
        podSelector:
                matchLabels:
        policyTypes:
                - Ingress
        ingress: []
